# sdl3_engine

./: CMakeLists.txt  README.md  vcpkg.json
assets/: scene.gltf  socrates.gltf
src/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ECS.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Renderer3DSystem.cpp  Renderer3DSystem.h  common.cpp  common.h  components.h  engine_types.h  main.cpp  old_main.cpp  vertex.h
src/renderlib/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  renderlib.h
src/shaders/: fragment.frag  fragment.glsl  vertex.glsl  vertex.spv  vertex.vert
